# tome

./: .gitignore  .ignore  .prettierrc  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  nightly.yml  release.yml
src/: app.css  app.d.ts  hooks.client.ts  markdown.css
src-tauri/: .gitignore  .taurignore  Cargo.toml  Info.plist  bunx  node  npx  python  relic.conf  tauri.conf.json  tauri.macos.conf.json  uv  uvx
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  daemon.rs  deeplink.rs  http.rs  main.rs  mcp.rs  migrations.rs  process.rs  state.rs  window.rs
src-tauri/src/mcp/: http.rs  process.rs  server.rs
src-tauri/src/window/: macos.rs
src-tauri/windows/: hooks.nsi
src/components/: AppEditor.svelte  Box.svelte  Button.svelte  ButtonToggle.svelte  Chat.svelte  Deleteable.svelte  Flex.svelte  Icon.svelte  Input.svelte  Link.svelte  List.svelte  McpServer.svelte  McpServerList.svelte  Menu.svelte  Message.svelte  Modal.svelte  ModelMenu.svelte  ModelSelect.svelte  Nav.svelte  PeriodInput.svelte  Redactable.svelte  ResizablePanels.svelte  Scrollable.svelte  Select.svelte  Spinner.svelte  Svg.svelte  Table.svelte  Task.svelte  Textarea.svelte  Thought.svelte  Titlebar.svelte  Toggle.svelte  Tooltip.svelte  Updater.svelte  Welcome.svelte
src/events/: apps.ts  filesystem.ts  index.ts  mcp.ts  registry.ts  relays.ts  types.ts
src/lib/: apps.ts  closables.ts  colorscheme.ts  config.ts  const.ts  deeplinks.d.ts  deeplinks.ts  dispatch.ts  ext.ts  http.ts  llm.d.ts  llm.ts  logger.ts  markdown.ts  mcp.d.ts  mcp.ts  models.ts  redaction.svelte.ts  relays.ts  result.ts  scheduler.ts  shellwords.ts  smithery.d.ts  smithery.ts  startup.ts  summarize.ts  tasks.ts  tool-call-migration.ts  types.ts  updates.ts  util.svelte.ts  (+1 more)
(+177 files in other folders)
